--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <main class="hero is-fullheight center">
         <div class="control mb-6 is-flex mr-6">
             <label class="has-text-weight-bold is-size-6 has-text-light is-align-self-flex-start ml-6 mt-6" for="timeWorking">Set your working time (in mn)</label>
-            <input class="is-align-self-flex-start ml-6 mt-6" id="timeWorking" value="25" type="number">
+            <input class="is-align-self-flex-start ml-6 mt-6" id="timeWorking" value="25" min="1" type="number">
             <label class="has-text-weight-bold is-size-6 has-text-light is-align-self-flex-start ml-6 mt-6" for="timeShortBreak">Set your short break time (in mn)</label>
-            <input class="is-align-self-flex-start ml-6 mt-6" id="timeShortBreak" value="5" type="number">
+            <input class="is-align-self-flex-start ml-6 mt-6" id="timeShortBreak" value="5" min="1" type="number">
             <label class="has-text-weight-bold is-size-6 has-text-light is-align-self-flex-start ml-6 mt-6" for="timeLongBreak">Set your long break time (in mn)</label>
-            <input class="is-align-self-flex-start ml-6 mt-6" id="timeLongBreak" value="15" type="number">
+            <input class="is-align-self-flex-start ml-6 mt-6" id="timeLongBreak" value="15" min="1" type="number">
         </div>
         <div class="notification center is-flex-direction-column is-justify-content-space-around">
             <!-- <div class="buttons">
